# korg_nanokontrol

./: CMakeLists.txt  README.md  korg.rosinstall  mainpage.dox  manifest.xml  package.xml  stack.xml
config/: nano_kontrol2_config.yaml
launch/: korg_nanokontrol.launch  korg_nanokontrol2.launch
nodes/: kontrol.py
src/korg_nanokontrol/: korg.py  korg_nanokontrol.py
