<package>
  <name>korg_nanokontrol</name>
  <version>0.1.2</version>
  <description>
      ROS driver to use the Kork NanoKontrol MIDI device as a joystick.
  </description>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <license>BSD</license>
  <author>Austin Hendrix</author>
  <url>http://ros.org/wiki/korg_nanokontrol</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>python-pygame</run_depend>
  
</package>


